# qbo-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  THEORY.MD  config.json.example  docs  pyproject.toml
02_docs/: architecture.md
03_notes/: 2026-02-17-bugfix-version-and-py39-compat.md  2026-02-17-comprehensive-audit-fixes.md  2026-02-17-review-p1p2-fixes.md  2026-02-17-test-suite-implementation.md  2026-02-19-flexible-dates.md  2026-03-17-commit-everything-session.md  2026-03-17-readonly-verification-session.md  2026-03-17-safe-cli-refactor-session.md  2026-03-19-gl-format-review-merge.md  2026-03-19-gl-guardrails-followup.md  2026-03-19-remote-gates-followup.md  2026-03-19-sonar-duplication-followup.md  2026-03-20-release-v070.md  2026-04-11-mypy-tests-gate.md  2026-04-11-post-marathon-handoff.md  2026-04-11-wave1-module-extraction.md  2026-04-11-wave6-cannon-agent-a.md  api-demo.md
qbo_cli/: __init__.py  auth.py  cli.py  cli_options.py  client.py  commands.py  config.py  constants.py  errors.py  gl_report.py  output.py  parser.py  qbo_query.py  report_registry.py
tests/: conftest.py  test_client.py  test_commands.py  test_config.py  test_formatting.py  test_live.py  test_live_sandbox_crud.py  test_parsing.py  test_pure.py
todos/: 001-complete-p1-oauth-state-csrf.md  002-complete-p1-lockfile-permissions.md  003-complete-p2-version-triplication.md  004-complete-p2-like-wildcard-escape.md  005-complete-p2-account-tree-on2.md  006-complete-p2-ci-pin-action-shas.md  007-pending-p3-dead-elif-branch.md  008-pending-p3-memoize-tree-properties.md  (+1 more)
(+16 files in other folders)
